red box dimensions are different so i fixed the size and spacing of it now.

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -83,8 +83,8 @@
 }
 
 #grid-section2 .gridboxred {
-	grid-row: 2/4;
-	grid-column: 1/4;
+	grid-row: 2/3;
+	grid-column: 1/3;
 }
 
 /* end Grid Part 2 */
